SigmaCodebackup3rdSep/objects/Inventory_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Qty__c</fullName>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Qty__c</fullName>
        <label>Delivered Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Transactions (Merchant Account)</relationshipLabel>
        <relationshipName>Inventory_Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Transactions (Parent Account)</relationshipLabel>
        <relationshipName>Inventory_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCode</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Transactions</relationshipLabel>
        <relationshipName>Inventory_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased_Qty__c</fullName>
        <label>Purchased Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Become_Out_Of_Stock__c</fullName>
        <label>Quantity To Become Out Of Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New product inventory</fullName>
                </value>
                <value>
                    <fullName>Product ordered</fullName>
                </value>
                <value>
                    <fullName>Order canceled</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Product stockin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_Qty__c</fullName>
        <label>Reserved Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Qty__c</fullName>
        <label>Shipped Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Availability__c</fullName>
        <formula>Available_Qty__c &gt;= Quantity_To_Become_Out_Of_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Available_Qty__c</fullName>
        <label>Total Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty__c</fullName>
        <label>Total Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Available_Qty__c</fullName>
        <label>Web Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Transaction</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>